# wblca-benchmark-v2-data-preparation

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
references/: col_dtypes.yml  col_finalize.yml  col_name_replacements.yml  col_value_replacements.yml  config_data_record.yml  config_harmonize.yml  config_metadata.yml  dropdown_cols.yml  dropdown_replacements.yml  dropdowns.yml  stored_carbon_database.xlsx
scripts/data_record/: 1_internal_data.py  2_buildings_metadata.py  3_lca_full_results.py
scripts/lca_results/: 1_clean.py  2_add_stored_carbon.py  3_map_elements.py  4_map_materials.py  5_map_elements_refined.py  6_combine.py  7_harmonize.py  sankey_viz.py
scripts/metadata/: 1_organize.py  2_test.py  3_clean.py  4_merge.py  5_combine.py  6_finalize.py
wblca_benchmark_v2_data_prep/data_record/: internal_data_calcs.py  metadata_calcs.py  output_format.py  results_calcs.py
wblca_benchmark_v2_data_prep/lca_results/: MappingImplementation.py  __init__.py  abstract_filters.py  all_ele_filters.py  all_mat_filters.py  clean.py  comb_refined_ele_filters.py  enums.py  oneclick_ele_filters.py  oneclick_mat_filters.py  refined_mat_filters.py  run.py  tally_ele_filters.py  tally_mat_filters.py
wblca_benchmark_v2_data_prep/metadata/: __init__.py  clean.py  combine.py  det_schema.py  finalize.py  general.py  merge.py  organize.py
wblca_benchmark_v2_data_prep/utils/: general.py  loggers.py
