[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "wblca_benchmark_v2_data_prep"
version = "1.0.0"
description = "Processing and creation of data record for WBLCA Benchmark Study v2."
authors = [
  { name = "Carbon Leadership Forum" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",

]
requires-python = "~=3.10"

[project.urls]
Homepage = "https://www.lifecyclelab.org/"
Repository = "https://github.com/Life-Cycle-Lab/wblca-benchmark-v2-data-preparation"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["src"]
force_sort_within_sections = true
